<?xml version="1.0"?>
<package>
  <name>ros_qt_demo</name>
  <version>0.1.0</version>
  <description>

     ros_qt_demo

  </description>
  <maintainer email="chengyangkj@qq.com">chengyangkj</maintainer>
  <author>chengyangkj</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/chengyangkj/ros_qt_demo/issues</url> -->
  <!-- <url type="repository">https://github.com/chengyangkj/ros_qt_demo</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>rviz</build_depend>
  <run_depend>rviz</run_depend>

 
</package>
